@@ -3,13 +3,15 @@ package br.com.gcbank.service;
 import br.com.gcbank.banco.contaDAO;
 import br.com.gcbank.exceptions.SaldoInsuficienteException;
 import br.com.gcbank.model.ContaCorrente;
+import br.com.gcbank.strategy.TarifaStrategy;
+
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+// import java.util.stream.Collectors;
 
 public class ContaService {
 
@@ -18,6 +20,12 @@ public class ContaService {
 
     public static final Predicate<ContaCorrente> SALDO_MAIOR_5000 = c -> c.getSaldo() > 5000;
     public static final Predicate<ContaCorrente> NUMERO_PAR = c -> c.getNumero() % 2 == 0;
+
+    public static final Comparator<ContaCorrente> POR_SALDO_DESC =
+        Comparator.comparingDouble(ContaCorrente::getSaldo).reversed();
+
+    public static final Comparator<ContaCorrente> POR_TITULAR =
+        Comparator.comparing(ContaCorrente::getTitular, String.CASE_INSENSITIVE_ORDER);
 
     public ContaService() {
         this.dao = new contaDAO();
@@ -130,19 +138,79 @@ public class ContaService {
     }
 
     // Retorna a lista filtrada (não imprime)
+
+    // contas.stream()
+    //     .filter(saldoMaior5000)
+    //     .forEach(c -> {
+    //       // aplica tarifa em memória
+    //       double tarifa = TarifaService.aplicarTarifa(c, TarifaStrategy.PERCENTUAL);
+          
+    //       // atualiza saldo no banco
+    //       try {
+    //           dao.atualizarSaldo(c.getNumero(), c.getSaldo());
+    //           System.out.printf("Tarifa %.2f aplicada à conta %d | Novo saldo %.2f%n",
+    //                             tarifa, c.getNumero(), c.getSaldo());
+    //       } catch (SQLException e) {
+    //           System.out.println("Erro ao atualizar conta " + c.getNumero() + ": " + e.getMessage());
+    //       }
+    //     });
+
     public List<ContaCorrente> filtrar(Predicate<ContaCorrente> filtro) {
         return contas.stream()
                      .filter(filtro)
-                     .collect(Collectors.toList());
+                     .toList(); //  ou .collect(Collectors.toList()) 
+    }
+    
+    public void imprimirFiltradas(Predicate<ContaCorrente> filtro) {
+        filtrar(filtro).forEach(c ->
+            System.out.printf("No. %d || %-20s || %.2f%n", c.getNumero(), c.getTitular(), c.getSaldo())
+        );
+    }
+
+
+    //ORDERNAÇÃO
+
+    public void listarOrdenadoPorSaldo() {
+        contas.stream()
+              .sorted(POR_SALDO_DESC)
+              .forEach(c -> System.out.printf("%d || %-20s || %.2f%n",
+                      c.getNumero(), c.getTitular(), c.getSaldo()));
+    }
+
+    public void listarOrdenadoPorTitular() {
+        contas.stream()
+              .sorted(POR_TITULAR)
+              .forEach(c -> System.out.printf("%d || %-20s || %.2f%n",
+                      c.getNumero(), c.getTitular(), c.getSaldo()));
+    }
+
+    public ContaCorrente buscarConta(int numero) {
+        return contas.stream()
+                    .filter(c -> c.getNumero() == numero)
+                    .findFirst()
+                    .orElse(null); // retorna null se não encontrar
+    }
+
+    public void aplicarTarifaNaConta(ContaCorrente conta, TarifaStrategy strategy) {
+        double tarifa = TarifaService.aplicarTarifa(conta, strategy); // altera saldo em memória
+        try {
+            if (dao.atualizarSaldo(conta.getNumero(), conta.getSaldo())) {
+                System.out.printf("Tarifa aplicada: %.2f | Novo saldo: %.2f%n",
+                                tarifa, conta.getSaldo());
+            } else {
+                System.out.println("Erro: não foi possível atualizar o saldo no banco.");
+            }
+        } catch (SQLException e) {
+            System.out.println("Erro ao atualizar saldo no banco: " + e.getMessage());
+        }
     }
 
     public void recarregar() {
         try {
-            contas.clear();
-            contas.addAll(dao.listar());
-            System.out.println("Aviso: Contas recarregadas da base.");
+            contas.clear();              // limpa a memória
+            contas.addAll(dao.listar()); // adiciona do banco
         } catch (SQLException e) {
             System.out.println("Erro ao recarregar: " + e.getMessage());
         }
-    }
+}
 }
